# CMakeList.txt : CMake project for stack_vector_test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (stack_vector_test "stack_vector_test.cpp" "stack_vector.h")

# TODO: Add tests and install targets if needed.
